com.github.dr_styki.screenrec (3.0.0) focal; urgency=medium

 * Add Flatpak support !

 -- dr_Styki <dr_styki@hack.i.ng>  Sat, 30 Oct 2021 16:55:00 +0200

com.github.dr_styki.screenrec (2.3.1) bionic; urgency=medium

 * Fix Cancel button color.

 * Use the right widget for shortcut tooltip.

 * Fix icon color in light/dark mode.

 * Add Romanian translation thanks to tiberiufrat.

 * Update Dutch translation by Vistaus.

 -- dr_Styki <dr_styki@hack.i.ng>  Wed, 13 Jan 2021 07:30:00 +0200

com.github.dr_styki.screenrec (2.3.0) bionic; urgency=medium

 * Add keyboard shortcuts for pause/resume and stop buttons.

 * Add tooltip for pause/resume and stop buttons.

 * Add grab screen icon for elementary OS 6 dark mode.

 * Fix sound checkbox background for elementary OS 6.

 * Remove raw format.

 -- dr_Styki <dr_styki@hack.i.ng>  Tue, 08 Dec 2020 21:31:00 +0200

com.github.dr_styki.screenrec (2.2.1) bionic; urgency=medium

 * Twitter now accept videos recorded by ScreenRec

 * Add Dutch translation thanks to Heimen Stoffels (Vistaus)

 * Add Russian translation thanks to nick87720z

 -- dr_Styki <dr_styki@hack.i.ng>  Wed, 28 Oct 2020 09:00:00 +0200

com.github.dr_styki.screenrec (2.2.0) bionic; urgency=medium

 * Add Portuguese (Portugal) translation thanks to André Barata <andretiagob@protonmail.com>

 * Add Portuguese (Brazilian) translation thanks to Henrique Andrade

 * Add Spanish translation thanks to CCaroV

 * A new beautiful icon thanks to Nararyans R.I. (Fatih20)

 * Add static quicklist

 * Respect the OS-wide dark preference

 -- dr_Styki <dr_styki@hack.i.ng>  Wed, 09 Sep 2020 21:00:00 +0200

com.github.dr_styki.screenrec (2.1.0) bionic; urgency=medium

 * Fix unsensitive window if record are canceled. Name change back to ScreenRec.

 -- dr_Styki <dr_styki@hack.i.ng>  Thu, 04 Jun 2020 07:00:00 +0200

com.github.dr_styki.screenrec (2.0.0) bionic; urgency=medium

 * Application rewite. Use Gstreamer backend instead of FFmpeg. Etc.
